--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,6 @@ description: > # this means to ignore newlines until "baseurl:"
   Raisercostin's blog with half baked 
   thoughts, ideas, mindmaps, projects.
 
-baseurl: ""
 url: ""
 twitter_username: raisercostin
 github_username:  raisercostin
@@ -31,4 +30,4 @@ exclude:
 disqus:
     shortname: raisercostin
 
-#permalink: /:year/:month/:day/:title/
+permalink: /:year/:month/:day/:title
