Url is automatically configured by githubpages, probably from CNAME file.

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: raisercostin's blog
 author: costin grigore
+#url: 'http://raisercostin.org'
 email: raisercostin@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   Raisercostin's blog with half baked 
