--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ gems:
 
 #minima theme config vars  
 google_analytics: ["UA-45773408-2"]
+
 exclude:
   - Gemfile
   - Gemfile.lock
@@ -36,5 +37,8 @@ excerpt_separator: "<!-- more -->"
 
 collections: 
     favicons:
+        output: true
+        permalink: /:path/
+    images:
         output: true
         permalink: /:path/
