add binaries collection with downloadable content just in case.

--- a/_config.yml
+++ b/_config.yml
@@ -42,3 +42,6 @@ collections:
     images:
         output: true
         permalink: /:path/
+    binaries:
+        output: true
+        permalink: /binaries/:path/
