--- a/_config.yml
+++ b/_config.yml
@@ -43,6 +43,9 @@ collections:
     binaries:
         output: true
         permalink: /binaries/:path/
+    feeds:
+        output: true
+        permalink: /:path
 
 paginate: 10
 paginate_path: '/blog/page:num/'
